[gd_scene load_steps=8 format=3 uid="uid://bvshnqsyvc0u"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1_8gp2i"]
[ext_resource type="Texture2D" uid="uid://cxy3wrknalkv2" path="res://assets/UI/SupremeUIPack/Long Buttons/B_Long_Yellow.png" id="2_c8cr4"]
[ext_resource type="Texture2D" uid="uid://3a8eqlo4x6bj" path="res://assets/UI/RectangleBox_96x96.png" id="2_m03bh"]
[ext_resource type="FontFile" uid="uid://3lbgwnx18aru" path="res://assets/UI/Cubic_11.ttf" id="3_e01w7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wcexh"]
atlas = ExtResource("2_c8cr4")
region = Rect2(0, 0, 38.0851, 18.4127)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb287"]
atlas = ExtResource("2_c8cr4")
region = Rect2(76.1507, -0.0707016, 38.3027, 18.4985)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i321"]
atlas = ExtResource("2_c8cr4")
region = Rect2(38.0656, 0, 38.9556, 18)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8gp2i")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 650.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -167.5
offset_right = 253.0
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m03bh")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -126.0
offset_right = -97.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e01w7")
theme_override_font_sizes/font_size = 12
text = "繼續遊戲"

[node name="ResumeButton" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = SubResource("AtlasTexture_wcexh")
texture_pressed = SubResource("AtlasTexture_pb287")
texture_hover = SubResource("AtlasTexture_0i321")
stretch_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e01w7")
theme_override_font_sizes/font_size = 12
text = "主要設置"

[node name="SettingsButton" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = SubResource("AtlasTexture_wcexh")
texture_pressed = SubResource("AtlasTexture_pb287")
texture_hover = SubResource("AtlasTexture_0i321")
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e01w7")
theme_override_font_sizes/font_size = 12
text = "回主選單"

[node name="MenuButton" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = SubResource("AtlasTexture_wcexh")
texture_pressed = SubResource("AtlasTexture_pb287")
texture_hover = SubResource("AtlasTexture_0i321")
stretch_mode = 0
